--- a/SSH_VPN_Client/SSH_VPN_Client.csproj
+++ b/SSH_VPN_Client/SSH_VPN_Client.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>ssh-proxy.ico</ApplicationIcon>
+    <AssemblyName>$(MSBuildProjectName.Replace("_", " "))</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
